# fluentiter-cpp

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: install.yml  macos.yml  style.yml  ubuntu.yml
all/: CMakeLists.txt
benchmark/: CMakeLists.txt
benchmark/source/: main.cpp
documentation/: CMakeLists.txt  conf.py
hooks/: pre-commit
include/fluentiter/: fluentiter.h
include/fluentiter/collectors/: collector.h  vectorcollector.h
include/fluentiter/ops/: filter.h  map.h  zip.h
source/: fluentiter.cpp
test/: CMakeLists.txt
test/source/: fluentiter.cpp
